# gmock-template

./: CMakeLists.txt  install.sh
src/: CMakeLists.txt  main.cxx
tests/: CMakeLists.txt  test.cxx
